# git-commit-fortune

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: tests.yml
docs/: project-copy.md  release-v0.1.0.md  release-v0.1.1.md
src/git_commit_fortune/: __init__.py  __main__.py  analyzer.py  cli.py  git_reader.py  models.py  render.py
tests/: test_analyzer.py  test_cli.py  test_git_reader.py
