[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-commit-fortune"
version = "0.1.0"
description = "Read Git history and generate a playful repository fortune."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Yang Lei", email = "yanglei711@gmail.com" }
]
keywords = ["git", "cli", "developer-tools", "fortune", "repository"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities"
]
dependencies = []

[project.scripts]
git-commit-fortune = "git_commit_fortune.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
